# manse-mog

./: LICENSE  README.md  tsconfig.json
.github/workflows/: publish.yml
adab/: .db.sqlite3  .env  Cargo.toml  ci.sh  diesel.toml  list  shell.nix
adab-db/: .gitignore  Cargo.toml  adab.html  diesel.toml
adab-db/src/: main.rs  schema.rs
adab/adab-cmd/: Cargo.toml
adab/adab-cmd/src/: html.rs  lib.rs  main.rs  old.rs
adab/adab-db/: Cargo.toml
adab/adab-db/migrations/2025-07-31-030833_entries/: up.sql
adab/adab-db/src/: lib.rs  models.rs  schema.rs
adab/adab-search/: list
adab/adab-search/src/: deezer.rs  html.rs  lib.rs
adab/migrations/2025-07-31-030833_entries/: down.sql  up.sql
adab/src/: main.rs
html/: adab.html  adab2.html  index.html  style.css
html/css/: adab.css  home.css  style.css
html/tools/: abnt.css  abnt.html  index.html  supsub.html  textmodel.ts
